--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,7 +108,7 @@
 	text-decoration: none;
 	border: 1px solid #eaeaea;
 	border-radius: 10px;
-	transition: color 0.15s ease, border-color 0.15s ease;
+	transition: all 300ms ease-in-out;
 	max-width: 500px;
 	width: 100%;
 }
@@ -118,6 +118,7 @@
 .card:active {
 	color: #0070f3;
 	border-color: #0070f3;
+	transform: scale(1.03);
 }
 
 .card h2 {
